# static-code-analysis-tool

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
core/: Analyzer.cpp  Analyzer.h  Context.h  Diagnostic.h
framework/: Rule.h  RuleRegistry.h
rules/HSCAA.1.2/: ReturnValueUsedCheck.cpp  ReturnValueUsedCheck.h
rules/HSCAA.2.1/: UnusedVariableCheck.cpp  UnusedVariableCheck.h
rules/HSCAA.2.2/: UnusedParameterCheck.cpp  UnusedParameterCheck.h
rules/HSCAA.2.3/: UnusedTypeCheck.cpp  UnusedTypeCheck.h
rules/HSCAA.2.4/: UnusedFunctionCheck.cpp  UnusedFunctionCheck.h
rules/HSCAG.4.2/: NameHidingCheck.cpp  (+1 more)
tests/: CStyleAndFunctionalCastCheckTest.cpp  ConstCastAwayQualifierCheckTest.cpp  DanglingPointerAssignmentCheckTest.cpp  DynamicTypeUsageCheck.cpp  ExceptionNoexceptCheckTest.cpp  ExceptionPointerCheckTest.cpp  ExplicitConstructorCheckTest.cpp  FunctionTemplateSpecializationCheckTest.cpp  IfElseMustEndWithElseTest.cpp  InvalidCastToPointerCheckTest.cpp  MemberFunctionPointerComparisonCheck.cpp  MemberInitializationCheckTest.cpp  NameHidingCheckTest.cpp  NoAdvancedMemoryTest.cpp  NoRawNewDeleteTest.cpp  NoexceptCheckTest.cpp  OverlappingCopyCheckTest.cpp  RefQualifierCheckTest.cpp  ReinterpretCastCheckTest.cpp  ReturnValueUsedCheckTest.cpp  SelfAssignmentCheckTest.cpp  UnusedFunctionCheckTest.cpp  UnusedParameterCheckTest.cpp  UnusedTypeCheckTest.cpp  UnusedVariableCheckTest.cpp  UseAfterMoveTest.cpp  VirtualBaseCastCheckTest.cpp  VirtualFunctionDefaultArgsCheckTest.cpp  VirtualInheritanceMismatchCheckTest.cpp  VirtualSpecifierCheckTest.cpp
utils/: ASTUtils.h
(+48 files in other folders)
